# siscript

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  main.si  rustfmt.toml
crates/si_ast/: Cargo.toml
crates/si_ast/src/: ast.rs  expr.rs  item.rs  lib.rs  path.rs  pattern.rs  pretty.rs  stmt.rs  ty.rs
crates/si_bytecode/: Cargo.toml
crates/si_bytecode/src/: builder.rs  constant.rs  error.rs  function.rs  instruction.rs  lib.rs  module.rs  signature.rs  value.rs
crates/si_cli/: Cargo.toml
crates/si_cli/src/: main.rs
crates/si_core/: Cargo.toml
crates/si_core/src/: id.rs  lib.rs  source.rs  span.rs  symbol.rs
crates/si_diagnostics/: Cargo.toml
crates/si_diagnostics/src/: diagnostic.rs  lib.rs  render.rs  report.rs
crates/si_lexer/: Cargo.toml
crates/si_lexer/src/: error.rs  keyword.rs  lexer.rs  lib.rs  literal.rs  token.rs
crates/si_lowering/: Cargo.toml
crates/si_lowering/src/: control_flow.rs  error.rs  expr_compile.rs  item_compile.rs  lib.rs  locals.rs  lowering.rs  stmt_compile.rs
crates/si_lowering/tests/: backend.rs
crates/si_lsp/: Cargo.toml
crates/si_lsp/src/: analysis.rs  analysis_index.rs  analysis_model.rs  backend.rs  code_actions.rs  completion.rs  config.rs  diagnostics.rs  document.rs  document_highlight.rs  goto.rs  hover.rs  lib.rs  main.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  signature_help.rs  symbols.rs  workspace.rs
crates/si_lsp/tests/: lsp_tests.rs
crates/si_lsp/tests/lsp/: code_actions.rs  completion.rs  diagnostics.rs  goto.rs  hover.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  symbols.rs
crates/si_parser/: Cargo.toml
crates/si_parser/src/: error.rs  (+8 more)
crates/si_resolver/: Cargo.toml
crates/si_tests/: Cargo.toml
crates/si_typecheck/: Cargo.toml
crates/si_vm/: Cargo.toml
docs/: ARCHITECTURE.md  LANGUAGE.md  LSP_ROADMAP.md  RESUME.md  ROADMAP.md
editors/vscode/: package-lock.json  package.json  tsconfig.json
editors/zed/: Cargo.toml  extension.toml  extension.wasm
scripts/: install_cli.sh  install_vscode_extension.sh  install_zed_extension.sh  test_zed_extension.sh
src/: main.rs
(+52 files in other folders)
