[package]
name = "si_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "si"
path = "src/main.rs"

[dependencies]
si_ast = { path = "../si_ast" }
si_core = { path = "../si_core" }
si_diagnostics = { path = "../si_diagnostics" }
si_lexer = { path = "../si_lexer" }
si_lowering = { path = "../si_lowering" }
si_parser = { path = "../si_parser" }
si_resolver = { path = "../si_resolver" }
si_typecheck = { path = "../si_typecheck" }
si_vm = { path = "../si_vm" }
