[package]
name = "si_lowering"
version = "0.1.0"
edition = "2024"

[dependencies]
si_ast = { path = "../si_ast" }
si_bytecode = { path = "../si_bytecode" }
si_core = { path = "../si_core" }
si_diagnostics = { path = "../si_diagnostics" }
si_resolver = { path = "../si_resolver" }
si_typecheck = { path = "../si_typecheck" }

[dev-dependencies]
si_lexer = { path = "../si_lexer" }
si_parser = { path = "../si_parser" }
si_vm = { path = "../si_vm" }
